--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "react": "19.1.0",
