--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,11 +20,11 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.1.2",
+    "react-native-reanimated": "^3.19.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.6.0"
+    "react-native-vision-camera": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
