--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^3.19.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-sensors": "^7.3.6",
     "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "^4.7.2"
   },
