--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 	
 	<uses-permission android:name="android.permission.CAMERA" />
+	
+	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
+	<!-- Back-compat for Android 12 and below -->
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
 
     <application
         android:name=".MainApplication"
