--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "1.1306",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-paper": "^5.14.5",
