--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-community/slider": "^5.0.1",
@@ -22,13 +23,16 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-calendars": "1.1306",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-paper": "^5.14.5",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.19.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-sensors": "^7.3.6",
+    "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "^4.7.2"
   },
