--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,16 @@
 ﻿FROM python:3.12-slim
 
 WORKDIR /app
+
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=1
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential curl libpq-dev && \
-    rm -rf /var/lib/apt/lists/*
+    build-essential \
+    curl \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /app/
 RUN pip install -r requirements.txt
