--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "i18next": "^25.7.3",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
+    "react-i18next": "^16.5.0",
     "react-native": "0.81.4",
     "react-native-calendars": "1.1306",
     "react-native-fs": "^2.20.0",
