Added shared dev and prod URLs

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -4,6 +4,12 @@ apply plugin: "com.facebook.react"
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
+/** React-native-config env mapping */
+project.ext.envConfigFiles = [
+    debug: ".env.development",
+    release: ".env.production"
+]
+
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -81,17 +87,17 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
 
     namespace "com.mobile"
-	defaultConfig {
-		applicationId "com.mobile"
-		minSdkVersion rootProject.ext.minSdkVersion
-		targetSdkVersion rootProject.ext.targetSdkVersion
-		versionCode 1
-		versionName "1.0"
+    defaultConfig {
+        applicationId "com.mobile"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode 1
+        versionName "1.0"
 
-		manifestPlaceholders = [
-			usesCleartextTraffic: true
-		]
-	}
+        manifestPlaceholders = [
+            usesCleartextTraffic: true
+        ]
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
