--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,7 @@
     "react-i18next": "^16.5.0",
     "react-native": "0.81.4",
     "react-native-calendars": "1.1306",
+    "react-native-config": "^1.6.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
