--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-camera-roll/camera-roll": "^7.10.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-community/slider": "^5.0.1",
+    "@react-native-firebase/app": "^23.8.3",
+    "@react-native-firebase/messaging": "^23.8.3",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/bottom-tabs": "^7.4.8",
