--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.4",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
